--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,7 +19,8 @@ classifiers = [
 ]
 
 dependencies = [
-  'typing_extensions; python_version < "3.8"'
+  'typing_extensions; python_version < "3.8"',
+  'hidapi'
 ]
 
 [project.optional-dependencies]
